3f02cd5e503561ca7785b0d530d64a2f8a61876c Fix: Corrections to Bulma dark mode integration
Sync to source repo @3f02cd5e503561ca7785b0d530d64a2f8a61876c

--- a/css/searchBuilder.bulma.css
+++ b/css/searchBuilder.bulma.css
@@ -163,9 +163,10 @@ div.dtsb-searchBuilder div.dtsb-group button.dtsb-clearGroup {
 }
 div.dtsb-searchBuilder div.dtsb-group div.dtsb-criteria select.dtsb-dropDown {
   height: 2.5em;
-  border-radius: 0.375em;
-  background-color: #fff;
+  border-radius: var(--bulma-control-radius);
+  background-color: hsl(var(--bulma-input-h), var(--bulma-input-s), calc(var(--bulma-input-background-l) + var(--bulma-input-background-l-delta)));
   padding-right: 2.5em;
+  border-width: 1px;
 }
 div.dtsb-searchBuilder div.dtsb-group div.dtsb-criteria select.dtsb-condition {
   border-color: #48c78e;
@@ -188,8 +189,8 @@ div.dtsb-searchBuilder div.dtsb-group div.dtsb-logicContainer {
   overflow: hidden;
 }
 div.dtsb-searchBuilder div.dtsb-group div.dtsb-logicContainer button.dtsb-logic {
-  border: none;
-  border-radius: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
   flex-grow: 1;
   flex-shrink: 0;
   flex-basis: 3em;
@@ -197,8 +198,9 @@ div.dtsb-searchBuilder div.dtsb-group div.dtsb-logicContainer button.dtsb-logic 
   padding: 0.375rem 0rem;
 }
 div.dtsb-searchBuilder div.dtsb-group div.dtsb-logicContainer button.dtsb-clearGroup {
-  border: none;
-  border-radius: 0px;
+  border-left: none;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
   width: 2em;
   margin: 0px;
 }
